--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT = 5000
-MongoDB_URI = mongodb+srv://nirmalvicky62:Thalaraj98@cluster0.eswoc.mongodb.net/Xclone?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET = SHFH354283jrjrr894749044
+PORT = 
+MongoDB_URI = 
+JWT_SECRET = 
 NODE_ENV = development
-CLOUDINARY_API_KEY = 692171976136181
-CLOUDINARY_API_SECRET = c1F89pGwbE62uyWE7nH7th0BqIg
-CLOUDINARY_CloudName = dfa5j3hbx
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET = 
+CLOUDINARY_CloudName = 
